--- a/spamEmailDetector/render.yaml
+++ b/spamEmailDetector/render.yaml
@@ -3,4 +3,4 @@ services:
     name: spam-email-detector
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn spamEmail.wsgi:application
+    startCommand: gunicorn spamEmailDetector.wsgi:application
